# minif2f

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  generate-all.sh  run  setup.sh
.claude/: MEMORY.md  settings.json  settings.local.json
.claude/archive/: code-audit-2026-06-11.md
.claude/archive/incidents/: 2026-06-05-dpo-empty.md  2026-06-05-kimina-think.md  2026-06-10-checkpoint-loss.md
.claude/hooks/: pre-generate.sh  quality.sh  verify-output.sh
.claude/memory/: 00-identity.md  01-architecture.md  02-models.md  03-pipeline.md  04-hardware.md  05-extraction-bug.md  05-quality.md  05b-stp-walrus-bug.md  05c-decoder-bug.md  05d-checkpoint-window-bug.md  05e-problem-desc-bug.md  06-decisions.md  07-blueprint.md  code-audit-report.md  code-quality-standards.md  git-commit-style.md  goedel-dpo-prompt-fix.md  hardware-constraints.md  kimina-prover-think-mode.md  model-registry.md  pipeline-architecture.md  project-purpose.md
.claude/skills/: check-status.md  code-audit.md  convert-model.md  debug-prompt.md  generate-proofs.md  pipeline-monitor.md
.claude/templates/: incident.md  new-model.md
.claude/workflows/: code-change.md  debug.md  generate.md  status.md  stp.md
output/raw_output/: goedel-prover-dpo.json  goedel-prover-v2-8b.json  kimina-prover-distill-8b.json  kimina-prover-rl-1.7b.json
scripts/: generate-all.sh  re-extract.sh  run-all-remaining.sh  setup.sh  stp_runner.py
src/: checkpoint.rs  config.rs  data.rs  inference.rs  lib.rs  main.rs  models.rs  pipeline.rs  prompts.rs
