[package]
name = "minif2f"
version = "0.1.0"
edition = "2021"
description = "Generate theorem proofs for miniF2F using LLMs"

[[bin]]
name = "minif2f"
path = "src/main.rs"

[lib]
name = "minif2f_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
indicatif = "0.17"
futures = "0.3"
